@@ -475,38 +475,48 @@ function _workflow_transition_form_element_validate_time($element, &$form_state,
 /**
  * Submit callback function for the Workflow Form / DefaultWidget.
  *
- * Move new state to proper element when using action buttons in Workflow form.
+ * When using action buttons in Workflow form, sets the new state to proper
+ * element and sets a submit function if needed.
  */
 function _workflow_transition_form_validate_buttons($form, &$form_state) {
-
-  // Move the State ID of the clicked button to the proper form element.
-  $form_state['input']['workflow_sid'] = $form_state['triggering_element']['#workflow_sid'];
-/*
   // Make sure the action is executed, influencing function core/includes/form.inc/form_execute_handlers().
   // In the workflow form, we were not aware yet of the submit buttons
   // of the complete form. We try to correct this here,
-  // without adding an hook_form_alter.
+  // without adding another hook_form_alter.
+
   if (count($form_state['triggering_element']['#submit'])) {
     // We are on a View page or History tab.
-    // Nothing to do: the correct submit button is already added.
+    // Move the State ID of the clicked button to the proper form element.
+    $form_state['input']['workflow_sid'] = $form_state['triggering_element']['#workflow_sid'];
+
+    // Nothing more to do: the correct submit button is already added.
   }
   elseif (!empty($form_state['buttons'][0]['#submit'])) {
     // We are on a Node form/Edit page. Try to fix the form_state.
-    // Attempt 1: Add the default submit handler: Success: no
+
+    // Move the State ID of the clicked button to the proper form element.
+    $form_state['values']['workflow_sid'] = $form_state['triggering_element']['#workflow_sid'];
+
+    // Add the submit handler of the first button (hopefully the Save button).
+    // Perhaps a better way is to search the button where ['#value'] == ['values']['submit'].
     if (!in_array(reset($form_state['buttons'][0]['#submit']), $form_state['submit_handlers'])) {
       $form_state['submit_handlers'] += $form_state['buttons'][0]['#submit'];
     }
-    // Attempt 2: Set the First button as clicked button: Success: no
-    $form_state['triggering_element'] = $form_state['buttons'][0];
-    $form_state['clicked_button'] = $form_state['buttons'][0];
   }
   else {
-    // We are on a Comment form. Somehow, the Save button does not have a
-    // submit callback (the Preview button has).
+    // We are on a Comment form. We don't know how to fix the form state.
+    // Somehow, the Save button does not have a submit callback (the Preview button has).
     // Don't know how to handle this. Should not be used, since this is a 'edit' page, too.
-    // $form_state['triggering_element']['#submit'] += $form_state['buttons'][0]['#submit'];
+
+    // So, this doesn't work... Setting the value does not make sense.
+    // Move the State ID of the clicked button to the proper form element.
+    // $form_state['values']['workflow_sid'] = $form_state['triggering_element']['#workflow_sid'];
+
+    drupal_set_message(t('Workflow Action buttons are not supported on this form 
+                          (form_id). Contact your site administrator.',
+                          array(@form_id => $form_state['build_info']['form_id'])),
+                       'warning');	
   }
- */
 }
 
 /**
